kubernetes/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gbms-deployment
  namespace: gbms
  labels:
    k8s-app: gbms-app
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: gbms-app
  template:
    metadata:
      labels:
        k8s-app: gbms-app
    spec:
      containers:
        - name: gbms-container
          image: registry.cn-hangzhou.aliyuncs.com/banff/gbmsk8s:latest
          ports:
            - containerPort: 8080
            - containerPort: 8443
          volumeMounts:
            - mountPath: "/root/.gradle"
              name: gbms-gradle-storage
      volumes:
        - name: gbms-gradle-storage
          persistentVolumeClaim:
            claimName: gbms-pv-claim
      imagePullSecrets:
        - name: regcred
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: activemq-deployment
  namespace: gbms
  labels:
    k8s-app: activemq-app
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: activemq-app
  template:
    metadata:
      labels:
        k8s-app: activemq-app
    spec:
      containers:
        - name: activemq-container
          image: registry.cn-hangzhou.aliyuncs.com/banff/activemq:latest
          ports:
            - containerPort: 61616
            - containerPort: 1883
            - containerPort: 8161
      imagePullSecrets:
        - name: regcred
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gbmsclient-deployment
  namespace: gbms
  labels:
    k8s-app: gbmsclient-app
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: gbmsclient-app
  template:
    metadata:
      labels:
        k8s-app: gbmsclient-app
    spec:
      containers:
        - name: gbmsclient-container
          image: registry.cn-hangzhou.aliyuncs.com/banff/uilab-gbms:master
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
---
kind: Service
apiVersion: v1
metadata:
  name: activemq-service
  namespace: gbms
spec:
  ports:
    - name: porta
      protocol: TCP
      port: 61616
      targetPort: 61616
    - name: portb
      protocol: TCP
      port: 1883
      targetPort: 1883
    - name: portc
      protocol: TCP
      port: 8161
      targetPort: 8161
  selector:
    k8s-app: activemq-app
---
kind: Service
apiVersion: v1
metadata:
  name: gbms-service
  namespace: gbms
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    k8s-app: gbms-app
---
kind: Service
apiVersion: v1
metadata:
  name: gbmsclient-service
  namespace: gbms
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    k8s-app: gbmsclient-app
