kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gbms-ingress
  namespace: gbms
spec:
  rules:
    - host: master.gbms.cloudlakenet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gbms-service
                port:
                  number: 8080
